test/type/wrong/hm3.kk.out
test/type/wrong/hm3.kk(2,11): error: types do not match
 context : f(True)
 term : True
 inferred type: bool
 expected type: int