test/type/wrong/hm3.kk
function wrong(f) {
  (f(1),f(True))
}
